[gd_scene load_steps=7 format=2]

[ext_resource path="res://Font/LiberationSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Options.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
use_filter = true
font_data = ExtResource( 1 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -499.143
margin_top = -249.603
margin_right = 500.857
margin_bottom = 250.397
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 989.0
margin_bottom = 489.0

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_right = 979.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 979.0
margin_bottom = 445.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 979.0
margin_bottom = 195.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="SoundFXLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 360.0
margin_top = 85.0
margin_right = 454.0
margin_bottom = 109.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "Sound FX:"
align = 1
valign = 1

[node name="SoundFXSlider" type="HSlider" parent="ColorRect/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 458.0
margin_top = 87.0
margin_right = 618.0
margin_bottom = 107.0
rect_min_size = Vector2( 160, 20 )
size_flags_vertical = 4
min_value = -50.0
max_value = 0.0

[node name="CustomCursorCheckBox" type="CheckBox" parent="ColorRect/MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 395.0
margin_top = 283.0
margin_right = 584.0
margin_bottom = 310.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = SubResource( 3 )
text = "Toggle Custom Cursor"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_left = 304.0
margin_top = 449.0
margin_right = 674.0
margin_bottom = 479.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 20
alignment = 1

[node name="BackButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 120.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 30 )
custom_fonts/font = SubResource( 4 )
text = "Back"

[node name="ApplyButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 140.0
margin_right = 260.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 30 )
custom_fonts/font = SubResource( 4 )
text = "Apply"

[node name="OKButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 280.0
margin_right = 370.0
margin_bottom = 30.0
rect_min_size = Vector2( 90, 30 )
custom_fonts/font = SubResource( 4 )
text = "OK"
[connection signal="value_changed" from="ColorRect/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/SoundFXSlider" to="." method="_on_SoundFXSlider_value_changed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/VBoxContainer/CustomCursorCheckBox" to="." method="_on_CustomCursorCheckBox_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/ApplyButton" to="." method="_on_ApplyButton_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/OKButton" to="." method="_on_OKButton_pressed"]
